@@ -1,8 +1,8 @@
 Package: ReadGenea
 Type: Package
 Title: Package For Reading Binary files
-Version: 2.3
-Date: 02/05/2012
+Version: 2.4
+Date: 09/05/2012
 Author: ActivInsights Ltd. <joss.langford@activinsights.co.uk>
 Maintainer: ActivInsights Ltd. <joss.langford@activinsights.co.uk>
 Description: Functions and analytics for Genea accelerometer data into R objects
